# realtime_ml_pipeline_for_fraud_detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml
docker/: Dockerfile  docker-compose.yml  prometheus.yml
k8s/: deployment.yaml
scripts/: train_models.py
src/fraud_detection/api/: app.py
src/fraud_detection/streaming/: consumer.py  producer.py
src/fraud_detection/utils/: config.py  data_generator.py
tests/: test_config.py  test_data_generator.py  test_xgboost_model.py
